--- a/app/src/main/res/layout/activity_search_page.xml
+++ b/app/src/main/res/layout/activity_search_page.xml
@@ -11,14 +11,14 @@
     android:layout_marginEnd="16dp"
     android:layout_marginRight="16dp"
     android:layout_marginBottom="16dp"
-    tools:context=".SerachPage">
+    tools:context=".SearchPage">
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="252dp"
         android:layout_height="49dp"
         android:layout_marginTop="16dp"
-        android:text="SEARCH PAGE"
+        android:text="@string/search_page"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +69,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:ems="10"
-        android:hint="Food name"
+        android:hint="@string/food_name"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toStartOf="@+id/button2"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,7 +83,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:onClick="search"
-        android:text="search"
+        android:text="@string/search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
