--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,8 @@
         android:layout_width="377dp"
         android:layout_height="217dp"
         android:layout_marginBottom="90dp"
+        android:divider="@android:color/holo_red_light"
+        android:dividerHeight="1dp"
         app:layout_constraintBottom_toTopOf="@+id/homePage"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
