--- a/app/src/main/res/layout/activity_new_goals.xml
+++ b/app/src/main/res/layout/activity_new_goals.xml
@@ -96,15 +96,16 @@
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <EditText
-        android:id="@+id/golaName"
+        android:id="@+id/goalName"
         android:layout_width="173dp"
         android:layout_height="40dp"
         android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="Goal Name"
         android:inputType="textPersonName"
         app:layout_constraintStart_toEndOf="@+id/textView9"
-        tools:layout_editor_absoluteY="91dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
