--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -12,7 +12,39 @@
     android:layout_marginRight="16dp"
     android:layout_marginBottom="16dp"
     tools:context=".Profile">
-
+    <TextView
+        android:id="@+id/Age_Label"
+        android:layout_width="99dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="216dp"
+        android:text="@string/age_label"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.085"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/Name_Label"
+        android:layout_width="99dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="148dp"
+        android:text="@string/name_label"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.085"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/Weight_Label"
+        android:layout_width="99dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="284dp"
+        android:text="@string/weight_label"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.085"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <Button
         android:id="@+id/button3"
         android:layout_width="wrap_content"
@@ -24,7 +56,6 @@
         android:text="back to home"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
     <Button
         android:id="@+id/button4"
         android:layout_width="wrap_content"
@@ -36,12 +67,11 @@
         android:text="save changes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/Profile_Label"
         android:layout_width="195dp"
         android:layout_height="50dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="16dp"
         android:text="Profile Page"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,23 +81,23 @@
     <EditText
         android:id="@+id/userName"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="50dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="160dp"
+        android:layout_marginLeft="160dp"
+        android:layout_marginTop="148dp"
         android:ems="10"
         android:hint="name"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/userAge"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="30dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="160dp"
+        android:layout_marginLeft="160dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="your age"
         android:inputType="number"
@@ -75,12 +105,12 @@
         app:layout_constraintTop_toBottomOf="@+id/userName" />
 
     <EditText
-        android:id="@+id/editTextNumber2"
+        android:id="@+id/userWeight"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="30dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="160dp"
+        android:layout_marginLeft="160dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="your weight"
         android:inputType="number"
