--- a/app/src/main/res/layout/activity_goals_page.xml
+++ b/app/src/main/res/layout/activity_goals_page.xml
@@ -72,11 +72,15 @@
 
     <ListView
         android:id="@+id/GoalList"
-        android:layout_width="376dp"
-        android:layout_height="453dp"
+        android:layout_width="364dp"
+        android:layout_height="380dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:divider="@android:color/holo_red_light"
         android:dividerHeight="1dp"
         app:layout_constraintBottom_toTopOf="@+id/homePage2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintVertical_bias="0.564" />
 </androidx.constraintlayout.widget.ConstraintLayout>
