as finished as it's getting

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -12,109 +12,50 @@
     android:layout_marginRight="16dp"
     android:layout_marginBottom="16dp"
     tools:context=".Profile">
+
     <TextView
-        android:id="@+id/Age_Label"
-        android:layout_width="99dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="216dp"
-        android:text="@string/age_label"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.085"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    <TextView
-        android:id="@+id/Name_Label"
-        android:layout_width="99dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="148dp"
-        android:text="@string/name_label"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.085"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    <TextView
-        android:id="@+id/Weight_Label"
-        android:layout_width="99dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="284dp"
-        android:text="@string/weight_label"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.085"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginBottom="20dp"
-        android:onClick="homePage"
-        android:text="back to home"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="20dp"
-        android:onClick="saveChanges"
-        android:text="save changes"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-    <TextView
-        android:id="@+id/Profile_Label"
-        android:layout_width="195dp"
-        android:layout_height="50dp"
+        android:id="@+id/textView2"
+        android:layout_width="218dp"
+        android:layout_height="48dp"
         android:layout_marginTop="16dp"
-        android:text="Profile Page"
+        android:text="@string/profiles_page"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/userName"
-        android:layout_width="wrap_content"
-        android:layout_height="44dp"
-        android:layout_marginStart="160dp"
-        android:layout_marginLeft="160dp"
-        android:layout_marginTop="148dp"
-        android:ems="10"
-        android:hint="name"
-        android:inputType="textPersonName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <Button
+        android:id="@+id/homePage2"
+        android:layout_width="118dp"
+        android:layout_height="50dp"
+        android:onClick="homePage"
+        android:text="@string/home"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText
-        android:id="@+id/userAge"
-        android:layout_width="wrap_content"
-        android:layout_height="44dp"
-        android:layout_marginStart="160dp"
-        android:layout_marginLeft="160dp"
+    <Button
+        android:id="@+id/button"
+        android:layout_width="243dp"
+        android:layout_height="51dp"
         android:layout_marginTop="24dp"
-        android:ems="10"
-        android:hint="your age"
-        android:inputType="number"
+        android:onClick="newProfile"
+        android:text="@string/new_profile"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userName" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-    <EditText
-        android:id="@+id/userWeight"
-        android:layout_width="wrap_content"
-        android:layout_height="44dp"
-        android:layout_marginStart="160dp"
-        android:layout_marginLeft="160dp"
-        android:layout_marginTop="24dp"
-        android:ems="10"
-        android:hint="your weight"
-        android:inputType="number"
+    <ListView
+        android:id="@+id/ProfileList"
+        android:layout_width="364dp"
+        android:layout_height="380dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:divider="@android:color/holo_red_light"
+        android:dividerHeight="1dp"
+        app:layout_constraintBottom_toTopOf="@+id/homePage2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userAge" />
-
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintVertical_bias="0.564" />
 </androidx.constraintlayout.widget.ConstraintLayout>
