--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,23 +90,25 @@
         android:text="@string/calories_for_today"
         android:textSize="30sp"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_editor_absoluteX="0dp" />
+        tools:layout_editor_absoluteX="0dp"
+        tools:ignore="MissingConstraints" />
 
-    <EditText
-        android:id="@+id/caloriesAte"
+    <TextView
+        android:id="@+id/calories"
         android:layout_width="133dp"
         android:layout_height="40dp"
         android:layout_marginTop="80dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:ems="10"
+        android:textSize="30sp"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         android:importantForAutofill="no" />
 
-    <Button
+    <!--<Button
         android:id="@+id/CaloriesBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -117,6 +119,6 @@
         app:layout_constraintHorizontal_bias="0.868"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.344" />
+        app:layout_constraintVertical_bias="0.344" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
